--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 
 github_username: sadafkabir # your GitHub user name
 gitlab_username: # your GitLab user name
-twitter_username: alidabouei # your Twitter handle
+twitter_username: # your Twitter handle
 linkedin_username: sadaf-kabir-40591a186 # your LinkedIn user name
 scholar_userid: vS5jLPEAAAAJ&hl # your Google Scholar ID
 orcid_id: # your ORCID ID
